test/Fail/BuiltinMustBeConstructorNotPatternSynonym.err
BuiltinMustBeConstructorNotPatternSynonym.agda:12.1-27: error: [BuiltinMustBeConstructor]
You must be a constructor in the binding to builtin FALSE
when checking the pragma BUILTIN FALSE You
